Fixed some layout issues.

--- a/style.css
+++ b/style.css
@@ -155,25 +155,28 @@ h3 {
 #facets .facet ul.facet-choices-available {max-height: 160px; overflow: auto;}
 
 #facets .facet.selected ul { display: block; }
-#facets .facet li { list-style: none; margin: 0; padding-left: 0px; padding-top: 5px; overflow: auto; color: #888; }
+#facets .facet li { position: relative; list-style: none; margin: 0; padding-left: 0px; padding-top: 5px; overflow: none; color: #888; }
 
 #facets .facet li a {
-  position: relative;
-  overflow: auto;
   display: block; 
-  color: #888; 
-  font-size: 13px; 
+  color: #888;
+  width: 190px;
+  height: 18px;
+  font-size: 13px;
   white-space: nowrap;
   padding-left: 30px;
 }
 
 #facets .facet li a:hover { text-decoration: none; color: #000; }
 #facets .facet li a:hover .tick-icon { border-color: #000; }
-#facets .facet li a span.item-count { 
+
+#facets .facet li a span.item-count {
+  position: absolute;
+  right: 0px;
   font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
   font-style: italic;
   font-weight: bold;
-  color: #bbb; margin-left: 5px; padding: 0 5px; font-size: 18px; float: right; /* background: #777; */
+  color: #bbb; margin-left: 5px; padding: 0 5px; font-size: 18px;
 }
 
 #facets .facet li.selected a span.item-count, #facets .facet li:hover a span.item-count { color: black; }
@@ -181,14 +184,14 @@ h3 {
 #facets .facet li a div.tick-icon { 
   position: absolute;
   left: 0px;
-  top: 2px;
+  top: 5px;
   border: 1px solid #ccc;
   padding: 2px;
   width: 14px;
   height: 14px;
 }
 
-#facets .facet .facet-choices { overflow: auto; }
+#facets .facet .facet-choices { overflow: hidden; margin-bottom: 4px; }
 #facets .facet li.facet-choice { color: #888; }
 #facets .facet li.facet-choice.selected a { color: black; }
 
